--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@ limitations under the License.
 
 -->
 <resources>
-    <string name="app_name">ShimmingRecyclerView</string>
+    <string name="app_name">ShimmerRecyclerViewX Sample</string>
 
     <string name="list_demo">List Demo</string>
     <string name="grid_demo">Grid Demo</string>
