--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@ limitations under the License.
     <string name="app_name">ShimmerRecyclerViewX Sample</string>
 
     <string name="list_demo">List Demo</string>
+    <string name="list_horizontal_demo">List Horizontal Demo</string>
     <string name="grid_demo">Grid Demo</string>
     <string name="second_list_demo">Second List Demo</string>
     <string name="second_grid_demo">Second Grid Demo</string>
@@ -26,25 +27,25 @@ limitations under the License.
     <string name="ab_list_title">Stories to read</string>
     <string name="ab_grid_title">Offers Zone</string>
 
-    <string name="got_titletext">Who Will Ride The Third Dragon In \'Game Of Thrones\' Season 7?</string>
-    <string name="got_image_url">http://cdn.idigitaltimes.com/sites/idigitaltimes.com/files/styles/image_embed/public/2016/04/29/game-thrones-daenerys-dragon-drogon.jpg</string>
-    <string name="got_subtext">Game of Thrones season 7 will kick off a new age of Game of Thrones, with the show becoming a true epic fantasy for the first time. Don’t worry, it will remain a high political drama too, but the war between ice and fire isn’t far off now, and Daenerys Targaryen seems destined to lead the fight</string>
-    <string name="got_summarytext">You\'ve shown interest in Game of Thrones series</string>
+    <string name="pokemon_title_1">Bulbasaur</string>
+    <string name="pokemon_description_1">There is a plant seed on its back right from the day this Pokémon is born. The seed slowly grows larger.</string>
+    <string name="pokemon_image_1">https://assets.pokemon.com/assets/cms2/img/pokedex/detail/001.png</string>
+    <string name="pokemon_summary_1">You\'ve shown interest in Bulbasaur</string>
 
-    <string name="ndtv_titletext">Agni 5, India\'s Longest Range Nuclear Capable Missile, Successfully Test Fired: 10 Points</string>
-    <string name="ndtv_subtext">Agni-5, India\'s longest range nuclear capable missile, was successfully test fired from the Kalam Island off Odisha coast today by the Defence Research and Development Organisation or DRDO. The intercontinental surface-to-surface ballistic missile, the latest in India\'s \"Agni\" family of medium to intercontinental range missiles, with new technology for navigation and guidance, gives India the strategic depth it needs to contain its enemies, say scientists. Ready to be deployed, the Agni-5 will soon join India\'s military arsenal</string>
-    <string name="ndtv_image_url">http://i.ndtvimg.com/i/2016-12/agni-5_650x400_71482721510.jpg</string>
-    <string name="ndtv_summarytext">You\'ve shown interest in Nuclear Capable Missles</string>
+    <string name="pokemon_title_2">Charmander</string>
+    <string name="pokemon_description_2">It has a preference for hot things. When it rains, steam is said to spout from the tip of its tail.</string>
+    <string name="pokemon_image_2">https://assets.pokemon.com/assets/cms2/img/pokedex/detail/004.png</string>
+    <string name="pokemon_summary_2">You\'ve shown interest in Charmander</string>
 
-    <string name="op_titletext">OnePlus releases leather case for OnePlus 3 and 3T</string>
-    <string name="op_subtext">OnePlus has released a leather case for the OnePlus 3/3T. Even though there are several cases for the OnePlus 3/3T, this one will offer a premium look for the smartphone. It has textured calfskin leather blend along with a classic matte finish making it easy to clean and also offers a comfortable grip.</string>
-    <string name="op_image_url">http://images.fonearena.com/blog/wp-content/uploads/2016/12/OnePlus-3-and-3T-leather-case-1.jpg</string>
-    <string name="op_summarytext">You\'ve shown interest in One Plus</string>
+    <string name="pokemon_title_3">Squirtle</string>
+    <string name="pokemon_description_3">When it retracts its long neck into its shell, it squirts out water with vigorous force.</string>
+    <string name="pokemon_image_3">https://assets.pokemon.com/assets/cms2/img/pokedex/detail/007.png</string>
+    <string name="pokemon_summary_3">You\'ve shown interest in Squirtle</string>
 
-    <string name="jet_titletext">Jet Airways Extends Sale, Offers Tickets Starting Rs. 990</string>
-    <string name="jet_subtext">Jet Airways has extended its promotional scheme offering fares starting as low as Rs. 990 on select domestic flights under economy class travel. Under Jet Airways\' \"Best Fares Forever\" offer, tickets must be purchased till December 27, 2016, for travel on or after January 4, 2017. \"Tickets must be purchased a minimum of 15 days prior departure,\" the airline said on its website, adding that limited seats are available under the offer on a first come, first serve basis.</string>
-    <string name="jet_image_url">http://i.ndtvimg.com/i/2016-11/jet-airways_650x400_51480009251.jpg</string>
-    <string name="jet_summarytext">You\'ve shown interest in Jet Airways</string>
+    <string name="pokemon_title_4">Pikachu</string>
+    <string name="pokemon_description_4">Pikachu that can generate powerful electricity have cheek sacs that are extra soft and super stretchy.</string>
+    <string name="pokemon_image_4">https://assets.pokemon.com/assets/cms2/img/pokedex/detail/025.png</string>
+    <string name="pokemon_summary_4">You\'ve shown interest in Pikachu</string>
 
     <string name="note5_titletext">Lenovo Vibe K5 Note</string>
     <string name="note5_image_url">https://rukminim1.flixcart.com/image/832/832/mobile/g/4/7/lenovo-k5-note-pa330010in-original-imaekyazjhfqveze.jpeg</string>
